@startuml

hide circle
skinparam classAttributeIconSize 0

class "{abstract}\n<i>Command" {
    +<i>execute(ModuleList:moduleList, Ui:ui, Storage:storage)
}


class "ProgressCommand" {
    +execute(ModuleList:moduleList, Ui:ui, Storage:storage)
}

class "UpdateCommand" {
    -moduleCode:String
    -targetModule:Module
    -moduleCredit:Double
    -moduleGrade:String
    -preRequisites:ArrayList<String>
    +execute(ModuleList:moduleList, Ui:ui, Storage:storage)
}

class "HelpCommand" {
    -helpType:String
    +execute(ModuleList:moduleList, Ui:ui, Storage:storage)
}

"{abstract}\n<i>Command" <|-- "ProgressCommand"
"{abstract}\n<i>Command" <|-- "UpdateCommand"
"{abstract}\n<i>Command" <|-- "HelpCommand"
@enduml